fix(frontend): visibility on hover of player stats element
Use `visibility` property of css to toggle the visbility of detailed
player stats component on hover, instead of opacity. (That should fix
the issue where it's visible even if not hovering on stats but on that
place instead)
Changes in /stats route page file & globals.css file

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -63,7 +63,7 @@ body {
 }
 
 .player-key-stat-box:hover > .tooltip {
-    opacity: 1;
+    visibility: visible;
 }
 
 .schedule-list::-webkit-scrollbar {
